Fixed sliders on firefox

--- a/src/App.css
+++ b/src/App.css
@@ -127,11 +127,23 @@
   height: 0.5rem;
 }
 
+.channel input[type="range"]::-moz-range-track {
+  background-color: black;
+  border-radius: 0.5rem;
+  height: 0.5rem;
+}
+
 .channel input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none; /* Override default look */
   appearance: none;
+}
 
-  /*custom styles*/
+.channel input[type="range"]::-moz-range-thumb {
+  border: none; /*Removes extra border that FF applies*/
+  border-radius: 3px;
+}
+
+.channel input[type=range]::-webkit-slider-thumb {
   background: linear-gradient(90deg, #111 0%, #444 10%, #ccc 15%, #444 49%, #ddd 49%, #ddd 51%, #444 51%, #222 87%, #444 87%, #ccc 100%);
   border: 1px solid black;
   border-radius: 3px;
@@ -141,11 +153,29 @@
   margin-top: -17px;
 }
 
-.channel .red input[type=range]::-webkit-slider-thumb  {
+.channel input[type=range]::-moz-range-thumb  {
+  background: linear-gradient(90deg, #111 0%, #444 10%, #ccc 15%, #444 49%, #ddd 49%, #ddd 51%, #444 51%, #222 87%, #444 87%, #ccc 100%);
+  border: 1px solid black;
+  border-radius: 3px;
+  filter: drop-shadow(-5px 5px 4px #222);
+  height: 40px;
+  width: 80px;
+  margin-top: -17px;
+}
+
+.channel .red input[type=range]::-webkit-slider-thumb {
   background: linear-gradient(90deg, #200 0%, #400 10%, #c00 15%, #400 49%, #ddd 49%, #ddd 51%, #400 51%, #200 87%, #400 87%, #c00 100%);
 }
 
-.channel .blue input[type=range]::-webkit-slider-thumb  {
+.channel .red input[type=range]::-moz-range-thumb {
+  background: linear-gradient(90deg, #200 0%, #400 10%, #c00 15%, #400 49%, #ddd 49%, #ddd 51%, #400 51%, #200 87%, #400 87%, #c00 100%);
+}
+
+.channel .blue input[type=range]::-webkit-slider-thumb {
+  background: linear-gradient(90deg, #002 0%, #114 10%, #33e 15%, #114 49%, #ddd 49%, #ddd 51%, #116 51%, #002 87%, #114 87%, #33e 100%);
+}
+
+.channel .blue input[type=range]::-moz-range-thumb  {
   background: linear-gradient(90deg, #002 0%, #114 10%, #33e 15%, #114 49%, #ddd 49%, #ddd 51%, #116 51%, #002 87%, #114 87%, #33e 100%);
 }
 
@@ -181,23 +211,6 @@
     border-color: #6e410e;
     background: radial-gradient(circle, rgba(251,235,63,1) 0%, rgba(252,166,70,1) 100%);
     filter: drop-shadow(0px 0px 5px rgba(252,166,70,1) );
-}
-
-input[type="range"]:focus::-webkit-slider-thumb {
-  background-color: #eee;
-}
-
-/* firefox faders */
-/* slider thumb */
-input[type="range"]::-moz-range-thumb {
-  border: none; /*Removes extra border that FF applies*/
-  border-radius: 3px;
-
-   /*custom styles*/
-  border: 1px solid black;
-  filter: drop-shadow(-5px 5px 4px #222);
-  height: 60px;
-  width: 80px;
 }
 
 /* Channel strip */
